# media-controller

./: Cargo.toml  README.md
.github/workflows/: release.yml
client/: index.html  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/assets/fonts/: gotham.css
client/src/components/player/: fullscreen-button.tsx  player-controls.tsx  progress-bar.tsx  track-display.tsx  track-thumbnail.tsx
client/src/components/ui/: button.tsx  slider.tsx
client/src/hooks/: use-hotkey.ts  use-inactivity-tracker.ts
client/src/lib/: socket-io.ts  utils.ts
server/: Cargo.toml
server/src/: main.rs  media_manager.rs  socket_io.rs  utils.rs
src/: main.rs  media_manager.rs  socket_io.rs  utils.rs
